added new handlers, update swagger
